--- a/Navino/app/build.gradle
+++ b/Navino/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.example.simeonm.da"
+        applicationId "com.example.emma.navino"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
@@ -24,16 +24,17 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 
     //noinspection GradleCompatible
-    implementation 'com.google.android.gms:play-services-maps:11.6.0'
-    implementation 'com.google.android.gms:play-services-location:11.6.0'
-    implementation 'com.google.android.gms:play-services-places:11.6.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-places:11.8.0'
     implementation 'com.google.maps.android:android-maps-utils:0.4.+'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.google.firebase:firebase-auth:11.6.0'
+    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.android.gms:play-services-auth:11.6.0'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.daimajia.androidanimations:library:1.1.2@aar'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.google.maps.android:android-maps-utils:0.3.4'
